--- a/newaccount.html
+++ b/newaccount.html
@@ -7,18 +7,19 @@
      <div class="container">
       <h1>Register Here</h1>
       <form name="Register page" action="" method="post" > 
-        <p>user name</p>
-        <input type="text" name="uname" placeholder="user name">
-        <p>Email id</p>
+        <p>User Name</p>
+        <input type="text" name="uname" placeholder="Name">
+        <p>Email Id</p>
         <input type="email" name="email" placeholder="user@email.com">
-        <p>password</p>
-        <input type="password " name="upass" placeholder="password">
-        <p>conformation password</p>
-        <input type="password " name="upass" placeholder="password">
-        <input type="submit" name="" value="login">
+        <p>Password</p>
+        <input type="password" name="upass" placeholder="password">
+        <p>Conformation Password</p>
+        <input type="password" name="upass" placeholder="password">
         <br><br>
-        <a href="intex.htm">existing user, login !?</a>
+        <input type="submit" name="" value="Login">
+        <br><br>
+        <a href="intex.htm">Existing user,login?</a>
       </form>
-      </div>>        
+      </div>   
    </body>
 </html>
