--- a/newaccount.html
+++ b/newaccount.html
@@ -18,7 +18,7 @@
         <br><br>
         <input type="submit" name="" value="Login">
         <br><br>
-        <a href="intex.htm">Existing user,login?</a>
+        <a href="intex.html">Existing user,login?</a>
       </form>
       </div>   
    </body>
