--- a/intex.html
+++ b/intex.html
@@ -6,7 +6,7 @@
    <body>
      <div class="container">
       <h1>Login Here</h1>
-      <form name="login page" action="" method="post" > 
+      <form name="login page" action="Link.php" method="post" > 
         <p>User Name</p>
         <input type="text" name="uname" placeholder="Name">
         <p>Password</p>
