--- a/newaccount.html
+++ b/newaccount.html
@@ -12,9 +12,9 @@
         <p>Email Id</p>
         <input type="email" name="email" placeholder="user@email.com">
         <p>Password</p>
-        <input type="password" name="upass" placeholder="password">
+        <input type="password" name="upass1" placeholder="password">
         <p>Conformation Password</p>
-        <input type="password" name="upass" placeholder="password">
+        <input type="password" name="upass2" placeholder="password">
         <br><br>
         <input type="submit" name="" value="Login">
         <br><br>
