--- a/newaccount.html
+++ b/newaccount.html
@@ -6,7 +6,7 @@
    <body>
      <div class="container">
       <h1>Register Here</h1>
-      <form name="Register page" action="" method="post" > 
+      <form name="Register page" action="Link.php" method="post" > 
         <p>User Name</p>
         <input type="text" name="uname" placeholder="Name">
         <p>Email Id</p>
